Adicionando exemplos de estruturas de repetição

--- a/Curso de Algoritmos/IDE/VISUALG.INI
+++ b/Curso de Algoritmos/IDE/VISUALG.INI
@@ -1,9 +1,9 @@
 [Files]
-MRUFile1=C:\Users\yasmi\Desktop\Lista de Algoritmos\Lista 2\Exercicio16.alg
-MRUFile2=C:\Users\yasmi\Desktop\Lista de Algoritmos\Lista 2\Exercicio15.alg
-MRUFile3=C:\Users\yasmi\Desktop\Lista de Algoritmos\Lista 2\Exercicio14.alg
-MRUFile4=C:\Users\yasmi\Desktop\Lista de Algoritmos\Lista 2\Exercicio13.alg
-MRUFile5=C:\Users\yasmi\Desktop\Lista de Algoritmos\Lista 2\Exercicio12.alg
+MRUFile1=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\Exemplos\Estruturas de repetição\exemplo Repita1.alg
+MRUFile2=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\Exemplos\exemplo para4.alg
+MRUFile3=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\Exemplos\exemplo para3.alg
+MRUFile4=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\Exemplos\exemplo para2.alg
+MRUFile5=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\Exemplos\exemplo para1.alg
 [Editor]
 CommentAttri=2
 CommentColor=32768
