sintaxe básica funções

--- a/Curso de Algoritmos/IDE/VISUALG.INI
+++ b/Curso de Algoritmos/IDE/VISUALG.INI
@@ -1,9 +1,9 @@
 [Files]
-MRUFile1=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\Lista de Algoritmos\Lista 3\Exercicio24.alg
-MRUFile2=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\Lista de Algoritmos\Lista 3\Exercicio23.alg
-MRUFile3=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\Lista de Algoritmos\Lista 3\Exercicio22.alg
-MRUFile4=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\Lista de Algoritmos\Lista 3\Exercicio21.alg
-MRUFile5=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\Lista de Algoritmos\Lista 3\Exercicio20.alg
+MRUFile1=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\Exemplos\Procedimentos\exemplo procedimentos COM PARÂMETROS..alg
+MRUFile2=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\Exemplos\Procedimentos\exemplo procedimentos..alg
+MRUFile3=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\Exemplos\Procedimentos\procedimentos com parâmetros..alg
+MRUFile4=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\Exemplos\Procedimentos\Sintaxe básico de procedimentos..alg
+MRUFile5=C:\Users\yasmi\Desktop\aula-pratica\01 - DetectorPesado.alg
 [Editor]
 CommentAttri=2
 CommentColor=32768
