--- a/Curso de Algoritmos/IDE/VISUALG.INI
+++ b/Curso de Algoritmos/IDE/VISUALG.INI
@@ -1,9 +1,9 @@
 [Files]
-MRUFile1=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\Exemplos\Procedimentos\exemplo procedimentos COM PARÂMETROS..alg
-MRUFile2=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\Exemplos\Procedimentos\exemplo procedimentos..alg
-MRUFile3=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\Exemplos\Procedimentos\procedimentos com parâmetros..alg
-MRUFile4=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\Exemplos\Procedimentos\Sintaxe básico de procedimentos..alg
-MRUFile5=C:\Users\yasmi\Desktop\aula-pratica\01 - DetectorPesado.alg
+MRUFile1=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\ParOuImpar.alg
+MRUFile2=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\ProcedimentoSoma.alg
+MRUFile3=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\PESOPESADO.alg
+MRUFile4=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\Lista de Algoritmos\Lista 4\exercicio 03.alg
+MRUFile5=C:\Users\yasmi\Desktop\Github\Estudos\Curso de Algoritmos\Lista de Algoritmos\Lista 4\exercicio 02.alg
 [Editor]
 CommentAttri=2
 CommentColor=32768
